# InsureTrace_Final

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: app.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  claim.py  user.py  vehicle.py
backend/app/routers/: auth.py  claims.py  test.py  vehicles.py
backend/app/schemas/: claim.py  user.py
backend/app/services/: consensus_ai.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ClaimUpload.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  Result.jsx  Signup.jsx
frontend/src/services/: api.js  authService.js  claimService.js
