[project]
name = "insuretrace"
version = "0.1.0"
description = "Blockchain-ready claims orchestration for Cognizant Technoverse 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.4.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "pillow>=11.2.1",
    "anthropic>=0.50.0",
    "pydantic-settings>=2.0.0",
]
